# forum-updater

./: .nens.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: nens-meta.yml
src/forum_updater/: posts.py  script.py  sites.py  threads.py  utils.py
tests/: test_sites.py  test_threads.py
