[project]
name = "forum-updater"
version = "0.1.0"
description = "Forum downloader/updater, mostly for restoring abload.de images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.zest-releaser]
release = false
